# visionfive2-sd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
example/testos/: Cargo.toml  Makefile  build.rs
example/testos/src/: boot.rs  config.rs  console.rs  fatfs.rs  main.rs  static_keys.rs
src/: cmd.rs  lib.rs  register.rs  utils.rs
